--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,232 @@
+/* ----- HOJA DE ESTILOS EN CASCADA - MovieApp ----- */
+/* Estilos generales de la página */
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #d1defa;
+  font-family: sans-serif, Arial, Helvetica;
+  text-align: center;
+  margin: 0px;
+  padding: 0px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.layout {
+  width: 100%;
+  height: auto;
+
+  display: grid;
+  grid-template-areas:
+    "header header header header"
+    "nav nav nav nav"
+    "content content content sidebar"
+    "footer footer footer footer"
+  ;
+  grid-template-rows: 90px 75px auto 60px;
+}
+
+button,
+input[type="submit"],
+input[type="button"] {
+  width: 100px;
+  background: #0b70e1;
+  color: white;
+  border: 0;
+  outline: 0;
+  padding: 15px;
+  border-radius: 3px;
+  margin-top: 15px;
+  margin-left: 4px;
+  margin-right: 4px;
+  text-transform: capitalize;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 300ms;
+}
+
+.hr {
+  margin-top: 20px;
+}
+
+/* Estilos - Cabecera */
+.header {
+  grid-area: header;
+
+  background-color: #f6f7f9;
+  text-align: left;
+  text-decoration: italic;
+
+  display: flex;
+  justify-content: center;
+}
+
+.header h1 {
+  margin-top: 27px;
+  margin-left: 10px;
+}
+
+.logo {
+  background: linear-gradient(90deg, #03228f 10%, #0e73e4 100%);
+  width: 40px;
+  height: 40px;
+  border-radius: 300px;
+  margin-top: 25px;
+}
+
+.play {
+  width: 0;
+  height: 0;
+  margin-top: 15px;
+  margin-left: 16px;
+  border-left: 12px solid #f6f7f9;
+  border-top: 6px solid transparent;
+  border-bottom: 6px solid transparent;
+}
+
+/* Estilos - Barra de navegación */
+.nav {
+  grid-area: nav;
+
+  background: linear-gradient(90deg, #03228f 10%, #0e73e4 100%);
+}
+
+.nav ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+
+.nav ul li {
+  padding: 10px;
+}
+
+.nav ul li a {
+  display: block;
+  color: #f6f7f9;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: lighter;
+  margin-left: 30px;
+  margin-right: 30px;
+  transition: all 300ms;
+}
+
+.nav ul li a:hover {
+  transform: scale(1.1, 1.1);
+  color: gainsboro;
+}
+
+/* Estilos - Contenido principal */
+.content {
+  grid-area: content;
+
+  background: #f6f7f9;
+
+  position: relative;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.welcome {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.welcome-message {
+  color: #0b70e1;
+}
+
+.movie-item {
+  flex-grow: 1;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0px 0px 6px #ddd;
+  margin: 20px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+.btn-edit:hover {
+  background: #ffc671;
+}
+
+.btn-delete:hover {
+  background: #F24C3D;
+}
+
+.btn-add:hover {
+  background: #CBFFA9;
+}
+
+.btn-search:hover {
+  background: #75C2F6;
+}
+
+/* Estilos - Barra lateral */
+.sidebar {
+  grid-area: sidebar;
+
+  background: #f6f7f9;
+  border-left: 1px solid #ddd;
+  padding: 20px;
+}
+
+.sidebar div {
+  box-sizing: border-box;
+  width: 90%;
+  margin: 20px;
+  padding: 20px;
+  padding-top: 10px;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0px 0px 6px #ddd;
+}
+
+input[type="text"],
+textarea {
+  display: block;
+  margin: 0 auto;
+  margin-top: 15px;
+  padding: 12px;
+  border-radius: 5px;
+  background: #f6f7f9;
+  color: #454545;
+  width: 80%;
+  opacity: 4;
+  outline: 0;
+  border-color: transparent;
+}
+
+/* Estilos - Pie de página */
+.footer {
+  grid-area: footer;
+
+  background: #d1defa;
+  color: #454545;
+  border-top: 1px solid white;
+  text-align: center;
+  line-height: 68px;
+  padding-left: 25px;
+}
+
+.footer a {
+  color: #0b468a;
+  text-decoration: none;
+}
+
+@media (max-width: 1085px) {
+  .content {
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .movie-item {
+    width: 80%;
+  }
 }
